--- a/Flowify/View/Base.lproj/Main.storyboard
+++ b/Flowify/View/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -197,58 +196,123 @@
                     <connections>
                         <outlet property="addButton" destination="HZs-nL-XYf" id="NCu-Tv-eUH"/>
                         <outlet property="flowers" destination="XdM-6t-BHh" id="p2c-vk-ipY"/>
+                        <segue destination="Y42-fh-8kg" kind="show" identifier="addFlower" id="YaX-Sy-lfw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="udJ-sM-Lmb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1921" y="718"/>
         </scene>
-        <!--View Controller-->
+        <!--Nueva planta-->
         <scene sceneID="09g-HS-fBJ">
             <objects>
-                <viewController id="Y42-fh-8kg" sceneMemberID="viewController">
+                <viewController id="Y42-fh-8kg" customClass="AddFlowerViewController" customModule="Flowify" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fAP-qV-SYg">
                         <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="QRe-JT-yKH">
-                                <rect key="frame" x="0.0" y="59" width="430" height="839"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="DA3-LE-De8">
+                                <rect key="frame" x="20" y="104.66666666666666" width="390" height="247.99999999999997"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="DA3-LE-De8" secondAttribute="height" multiplier="390:251" id="Nmm-Q3-IwB"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nombre" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Tlm-Ae-G4V">
+                                <rect key="frame" x="20" y="384" width="390" height="40"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" name="Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="auu-4I-nzu"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="XUJ-o2-Ion">
+                                <rect key="frame" x="20" y="436" width="390" height="393"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hs2-yu-vI9">
-                                        <rect key="frame" x="0.0" y="0.0" width="430" height="419.66666666666669"/>
-                                        <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KZU-SD-Vd9">
-                                                <rect key="frame" x="20" y="0.0" width="390" height="300"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" secondItem="KZU-SD-Vd9" secondAttribute="height" multiplier="13:10" id="3O3-Aq-w56"/>
-                                                    <constraint firstAttribute="height" constant="300" id="yLw-JM-Yu2"/>
-                                                </constraints>
-                                            </imageView>
-                                        </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                        <constraints>
-                                            <constraint firstItem="KZU-SD-Vd9" firstAttribute="top" secondItem="Hs2-yu-vI9" secondAttribute="top" id="4QL-Lk-mYH"/>
-                                            <constraint firstItem="KZU-SD-Vd9" firstAttribute="leading" secondItem="Hs2-yu-vI9" secondAttribute="leading" constant="20" symbolic="YES" id="fdg-Hh-0bl"/>
-                                            <constraint firstAttribute="trailing" secondItem="KZU-SD-Vd9" secondAttribute="trailing" constant="20" symbolic="YES" id="hRM-gi-HI9"/>
-                                        </constraints>
-                                    </view>
-                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iX4-yh-rzY">
-                                        <rect key="frame" x="0.0" y="419.66666666666674" width="430" height="419.33333333333326"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Riego" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4va-bd-Owg">
+                                        <rect key="frame" x="0.0" y="0.0" width="390" height="65.666666666666671"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="KEi-0U-McF">
+                                        <rect key="frame" x="0.0" y="65.666666666666686" width="390" height="66.333333333333314"/>
+                                        <segments>
+                                            <segment title="Escaso"/>
+                                            <segment title="Moderado"/>
+                                            <segment title="Frecuente"/>
+                                        </segments>
+                                        <color key="selectedSegmentTintColor" name="Color"/>
+                                        <connections>
+                                            <action selector="irrigation:" destination="Y42-fh-8kg" eventType="valueChanged" id="zR1-cI-51t"/>
+                                        </connections>
+                                    </segmentedControl>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Luz" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QsD-Xu-Pc1">
+                                        <rect key="frame" x="0.0" y="131" width="390" height="65.666666666666686"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="57c-dx-PAk">
+                                        <rect key="frame" x="0.0" y="196.66666666666663" width="390" height="66.333333333333314"/>
+                                        <segments>
+                                            <segment title="Sol"/>
+                                            <segment title="Luz no directa"/>
+                                        </segments>
+                                        <color key="selectedSegmentTintColor" name="Color"/>
+                                        <connections>
+                                            <action selector="light:" destination="Y42-fh-8kg" eventType="valueChanged" id="LPs-qY-xLF"/>
+                                        </connections>
+                                    </segmentedControl>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Localización" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xca-pe-NhI">
+                                        <rect key="frame" x="0.0" y="262" width="390" height="65.666666666666686"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="xCZ-zB-h75">
+                                        <rect key="frame" x="0.0" y="327.66666666666663" width="390" height="66.333333333333314"/>
+                                        <segments>
+                                            <segment title="Interior"/>
+                                            <segment title="Exterior"/>
+                                        </segments>
+                                        <color key="selectedSegmentTintColor" name="Color"/>
+                                        <connections>
+                                            <action selector="location:" destination="Y42-fh-8kg" eventType="valueChanged" id="JOY-xr-E49"/>
+                                        </connections>
+                                    </segmentedControl>
                                 </subviews>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ZAt-fg-to4"/>
                         <color key="backgroundColor" name="Secondary"/>
                         <constraints>
-                            <constraint firstItem="ZAt-fg-to4" firstAttribute="trailing" secondItem="QRe-JT-yKH" secondAttribute="trailing" id="0KQ-cG-yWg"/>
-                            <constraint firstItem="QRe-JT-yKH" firstAttribute="top" secondItem="ZAt-fg-to4" secondAttribute="top" id="8ta-bE-PVy"/>
-                            <constraint firstItem="QRe-JT-yKH" firstAttribute="leading" secondItem="ZAt-fg-to4" secondAttribute="leading" id="nyz-s7-OPc"/>
-                            <constraint firstItem="ZAt-fg-to4" firstAttribute="bottom" secondItem="QRe-JT-yKH" secondAttribute="bottom" id="th8-RT-b8e"/>
+                            <constraint firstItem="Tlm-Ae-G4V" firstAttribute="leading" secondItem="ZAt-fg-to4" secondAttribute="leading" constant="20" id="DL3-MX-f8z"/>
+                            <constraint firstItem="XUJ-o2-Ion" firstAttribute="leading" secondItem="ZAt-fg-to4" secondAttribute="leading" constant="20" id="Q5g-5A-5q3"/>
+                            <constraint firstItem="XUJ-o2-Ion" firstAttribute="top" secondItem="Tlm-Ae-G4V" secondAttribute="bottom" constant="12" id="YwM-UU-7AK"/>
+                            <constraint firstItem="DA3-LE-De8" firstAttribute="top" secondItem="ZAt-fg-to4" secondAttribute="top" id="aUo-Rj-tyu"/>
+                            <constraint firstItem="Tlm-Ae-G4V" firstAttribute="top" secondItem="DA3-LE-De8" secondAttribute="bottom" constant="30" id="avT-i5-ML8"/>
+                            <constraint firstItem="ZAt-fg-to4" firstAttribute="bottom" secondItem="XUJ-o2-Ion" secondAttribute="bottom" constant="20" id="e0f-Ag-cGq"/>
+                            <constraint firstItem="ZAt-fg-to4" firstAttribute="trailing" secondItem="Tlm-Ae-G4V" secondAttribute="trailing" constant="20" id="fzV-BE-ggc"/>
+                            <constraint firstItem="ZAt-fg-to4" firstAttribute="trailing" secondItem="DA3-LE-De8" secondAttribute="trailing" constant="20" id="lLa-UU-YUa"/>
+                            <constraint firstItem="DA3-LE-De8" firstAttribute="leading" secondItem="ZAt-fg-to4" secondAttribute="leading" constant="20" id="uGp-D4-4Vq"/>
+                            <constraint firstItem="ZAt-fg-to4" firstAttribute="trailing" secondItem="XUJ-o2-Ion" secondAttribute="trailing" constant="20" id="wvq-Br-xT4"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Nueva planta" id="xDU-G1-S6K">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="GLh-pM-0CW">
+                            <connections>
+                                <action selector="saveData:" destination="Y42-fh-8kg" id="t2i-PE-RFn"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="imageSelected" destination="DA3-LE-De8" id="vnD-6N-aOx"/>
+                        <outlet property="nameTextField" destination="Tlm-Ae-G4V" id="HJ0-X2-h0o"/>
+                        <outlet property="saveOutlet" destination="GLh-pM-0CW" id="RsG-zJ-NDV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YOh-ul-UIY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -282,6 +346,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="yaU-vr-LDV" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="tmC-a3-c6c">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" name="Secondary"/>
                         <userDefinedRuntimeAttributes>
@@ -309,7 +374,7 @@
                         <rect key="frame" x="0.0" y="59" width="430" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" name="Secondary"/>
-                        <color key="tintColor" name="Secondary"/>
+                        <color key="tintColor" name="Color 2"/>
                         <color key="barTintColor" name="Secondary"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -327,7 +392,10 @@
         <image name="magnifyingglass" catalog="system" width="128" height="117"/>
         <image name="photo" catalog="system" width="128" height="93"/>
         <namedColor name="Color">
-            <color red="0.66666666666666663" green="0.30980392156862746" blue="0.44705882352941179" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.72156862745098038" green="0.4823529411764706" blue="0.5725490196078431" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Color 2">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Primary">
             <color red="0.88235294117647056" green="0.88627450980392153" blue="0.88235294117647056" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -335,8 +403,5 @@
         <namedColor name="Secondary">
             <color red="0.61960784313725492" green="0.82352941176470584" blue="0.74509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
