--- a/Flowify/View/Base.lproj/Main.storyboard
+++ b/Flowify/View/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="yaU-vr-LDV">
-    <device id="retina6_72" orientation="portrait" appearance="light"/>
+    <device id="retina6_72" orientation="portrait" appearance="dark"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -198,11 +199,140 @@
                         <outlet property="flowers" destination="XdM-6t-BHh" id="p2c-vk-ipY"/>
                         <segue destination="Y42-fh-8kg" kind="show" identifier="addFlower" id="YaX-Sy-lfw"/>
                         <segue destination="Y42-fh-8kg" kind="show" identifier="modifyFlower" id="RpF-VR-n8S"/>
+                        <segue destination="Vuq-0F-eDa" kind="show" identifier="segueInfo" id="Ed6-DX-qZX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="udJ-sM-Lmb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1930" y="718"/>
+        </scene>
+        <!--Información-->
+        <scene sceneID="QWG-mN-3a0">
+            <objects>
+                <viewController id="Vuq-0F-eDa" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="RA6-rV-lIN">
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TZK-Ey-ljr">
+                                <rect key="frame" x="0.0" y="103" width="430" height="746"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Rf0-lo-ysH">
+                                        <rect key="frame" x="20" y="1.6666666666666572" width="390" height="248"/>
+                                        <color key="tintColor" systemColor="labelColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="Rf0-lo-ysH" secondAttribute="height" multiplier="390:251" id="xCT-AL-vjl"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V2Q-aP-MsJ">
+                                        <rect key="frame" x="20" y="201" width="390" height="50"/>
+                                        <color key="backgroundColor" name="Color 1"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="Asd-Le-LO4"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Gz-BG-FRM">
+                                        <rect key="frame" x="20" y="261" width="390" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="NHd-LP-LcH"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8eI-cc-Zzb">
+                                        <rect key="frame" x="20" y="311" width="390" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="W7a-xg-1or"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bpx-ni-JHM">
+                                        <rect key="frame" x="20" y="361" width="390" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="ggW-96-5kl"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oy7-PP-aZV">
+                                        <rect key="frame" x="361" y="456" width="51" height="31"/>
+                                        <color key="onTintColor" name="Color"/>
+                                    </switch>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recordatorio de riego" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pPF-od-mPc">
+                                        <rect key="frame" x="20" y="446" width="321" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="jiu-4H-Z2E"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="l7h-9v-bRo">
+                                        <rect key="frame" x="20" y="526" width="390" height="51"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="LLL-Is-gsx"/>
+                                        </constraints>
+                                        <segments>
+                                            <segment title="Mon"/>
+                                            <segment title="Tue"/>
+                                            <segment title="Wed"/>
+                                            <segment title="Thu"/>
+                                            <segment title="Fri"/>
+                                            <segment title="Sat"/>
+                                            <segment title="Sun"/>
+                                        </segments>
+                                        <color key="selectedSegmentTintColor" name="Color"/>
+                                    </segmentedControl>
+                                </subviews>
+                                <color key="backgroundColor" name="Primary"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="8eI-cc-Zzb" secondAttribute="trailing" constant="20" id="0E2-V6-WXb"/>
+                                    <constraint firstItem="Rf0-lo-ysH" firstAttribute="leading" secondItem="TZK-Ey-ljr" secondAttribute="leading" constant="20" id="2WX-Ll-XSl"/>
+                                    <constraint firstItem="oy7-PP-aZV" firstAttribute="leading" secondItem="pPF-od-mPc" secondAttribute="trailing" constant="20" id="4dK-9s-eOG"/>
+                                    <constraint firstItem="7Gz-BG-FRM" firstAttribute="top" secondItem="Rf0-lo-ysH" secondAttribute="bottom" constant="10" id="6if-gJ-adb"/>
+                                    <constraint firstItem="V2Q-aP-MsJ" firstAttribute="leading" secondItem="TZK-Ey-ljr" secondAttribute="leading" constant="20" id="82a-wM-olc"/>
+                                    <constraint firstItem="pPF-od-mPc" firstAttribute="leading" secondItem="TZK-Ey-ljr" secondAttribute="leading" constant="20" id="BWi-IF-bCR"/>
+                                    <constraint firstItem="8eI-cc-Zzb" firstAttribute="top" secondItem="7Gz-BG-FRM" secondAttribute="bottom" id="EZB-Aa-BjF"/>
+                                    <constraint firstItem="l7h-9v-bRo" firstAttribute="top" secondItem="pPF-od-mPc" secondAttribute="bottom" constant="30" id="JeC-0Y-zk1"/>
+                                    <constraint firstItem="7Gz-BG-FRM" firstAttribute="leading" secondItem="TZK-Ey-ljr" secondAttribute="leading" constant="20" id="KQw-Ny-2SR"/>
+                                    <constraint firstAttribute="trailing" secondItem="Bpx-ni-JHM" secondAttribute="trailing" constant="20" id="LdB-rm-upV"/>
+                                    <constraint firstItem="pPF-od-mPc" firstAttribute="top" secondItem="Bpx-ni-JHM" secondAttribute="bottom" constant="35" id="PlM-kx-17c"/>
+                                    <constraint firstAttribute="trailing" secondItem="l7h-9v-bRo" secondAttribute="trailing" constant="20" id="Rkf-3C-AfO"/>
+                                    <constraint firstItem="Rf0-lo-ysH" firstAttribute="top" secondItem="TZK-Ey-ljr" secondAttribute="top" id="WEM-SH-VbK"/>
+                                    <constraint firstAttribute="trailing" secondItem="Rf0-lo-ysH" secondAttribute="trailing" constant="20" id="YMq-WW-4Ma"/>
+                                    <constraint firstAttribute="trailing" secondItem="V2Q-aP-MsJ" secondAttribute="trailing" constant="20" id="aJf-9F-R9k"/>
+                                    <constraint firstItem="oy7-PP-aZV" firstAttribute="top" secondItem="Bpx-ni-JHM" secondAttribute="bottom" constant="45" id="bbz-q2-amu"/>
+                                    <constraint firstItem="8eI-cc-Zzb" firstAttribute="leading" secondItem="TZK-Ey-ljr" secondAttribute="leading" constant="20" id="faq-Vl-5bv"/>
+                                    <constraint firstAttribute="trailing" secondItem="oy7-PP-aZV" secondAttribute="trailing" constant="20" id="nmH-zb-1lF"/>
+                                    <constraint firstItem="Bpx-ni-JHM" firstAttribute="leading" secondItem="TZK-Ey-ljr" secondAttribute="leading" constant="20" id="ppv-Cu-530"/>
+                                    <constraint firstAttribute="trailing" secondItem="7Gz-BG-FRM" secondAttribute="trailing" constant="20" id="stD-W8-I68"/>
+                                    <constraint firstItem="l7h-9v-bRo" firstAttribute="leading" secondItem="TZK-Ey-ljr" secondAttribute="leading" constant="20" id="vLJ-Hs-Kwh"/>
+                                    <constraint firstItem="Bpx-ni-JHM" firstAttribute="top" secondItem="8eI-cc-Zzb" secondAttribute="bottom" id="w68-I4-4GF"/>
+                                    <constraint firstItem="Rf0-lo-ysH" firstAttribute="bottom" secondItem="V2Q-aP-MsJ" secondAttribute="bottom" id="xKm-HF-8xi"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="zEW-HE-27U"/>
+                        <color key="backgroundColor" name="Secondary"/>
+                        <constraints>
+                            <constraint firstItem="TZK-Ey-ljr" firstAttribute="leading" secondItem="zEW-HE-27U" secondAttribute="leading" id="HgR-rX-dep"/>
+                            <constraint firstItem="zEW-HE-27U" firstAttribute="bottom" secondItem="TZK-Ey-ljr" secondAttribute="bottom" id="feg-hn-G5f"/>
+                            <constraint firstItem="TZK-Ey-ljr" firstAttribute="top" secondItem="zEW-HE-27U" secondAttribute="top" id="ldV-z3-BIB"/>
+                            <constraint firstItem="zEW-HE-27U" firstAttribute="trailing" secondItem="TZK-Ey-ljr" secondAttribute="trailing" id="rxd-2H-kOc"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Información" id="b3P-5z-ePU"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eCN-bO-wGW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2793.4883720930234" y="1425.9656652360516"/>
         </scene>
         <!--Nueva planta-->
         <scene sceneID="09g-HS-fBJ">
@@ -212,7 +342,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="DA3-LE-De8">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="DA3-LE-De8">
                                 <rect key="frame" x="20" y="104.66666666666666" width="390" height="247.99999999999997"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -311,7 +441,7 @@
                                             <action selector="saveData:" destination="Y42-fh-8kg" id="t2i-PE-RFn"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem systemItem="organize" id="3EE-0u-ywr">
+                                    <barButtonItem title="Select Image" image="folder" catalog="system" id="3EE-0u-ywr">
                                         <connections>
                                             <action selector="searchImage:" destination="Y42-fh-8kg" id="zbj-SK-4M9"/>
                                         </connections>
@@ -322,6 +452,9 @@
                     </navigationItem>
                     <connections>
                         <outlet property="imageSelected" destination="DA3-LE-De8" id="vnD-6N-aOx"/>
+                        <outlet property="irrigationOutlet" destination="KEi-0U-McF" id="MpY-Ac-BfD"/>
+                        <outlet property="lightOutlet" destination="57c-dx-PAk" id="e1z-xl-ipD"/>
+                        <outlet property="locationOutlet" destination="xCZ-zB-h75" id="Wyf-5m-khf"/>
                         <outlet property="nameTextField" destination="Tlm-Ae-G4V" id="HJ0-X2-h0o"/>
                         <outlet property="saveOutlet" destination="GLh-pM-0CW" id="RsG-zJ-NDV"/>
                     </connections>
@@ -404,11 +537,15 @@
     </inferredMetricsTieBreakers>
     <resources>
         <image name="camera.macro" catalog="system" width="128" height="114"/>
+        <image name="folder" catalog="system" width="128" height="96"/>
         <image name="magnifyingglass" catalog="system" width="128" height="117"/>
         <image name="photo" catalog="system" width="128" height="93"/>
         <image name="square.and.arrow.down.on.square.fill" catalog="system" width="122" height="128"/>
         <namedColor name="Color">
             <color red="0.72156862745098038" green="0.4823529411764706" blue="0.5725490196078431" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Color 1">
+            <color red="0.0" green="0.0" blue="0.0" alpha="0.68999999761581421" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Color 2">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -419,5 +556,8 @@
         <namedColor name="Secondary">
             <color red="0.61960784313725492" green="0.82352941176470584" blue="0.74509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="labelColor">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
